Closed
Bug 196704
Opened 22 years ago
Closed 22 years ago
Services menu not functioning when focus is in the browser page
Categories
(Camino Graveyard :: OS Integration, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: sfraser_bugs)
References
Details
(Keywords: regression, topembed+)
Attachments
(1 file)
16.99 KB,
patch
|
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
Build: 2003-03-08-08 Platform: OS X 10.2.4 Expected Results: With a text selection made on the page, the services menu should be functional What I got: With a text selection made on the page, Service menu items like Mail, Make a new sticky note, Summarize, Speech, and TextEdit are functional. Steps to reproduce: 1) Select some text on a page 2) Go to Services menu 3) None of item mentioned are functional.
Reporter | ||
Updated•22 years ago
|
Keywords: regression
Assignee | ||
Updated•22 years ago
|
Status: NEW → ASSIGNED
Assignee | ||
Comment 1•22 years ago
|
||
We need the patches in bug 152023 and bug 180405 on the trunk.
Comment 2•22 years ago
|
||
Doesn't work as of Build ID: 2003040905. What needs to be done to get those patches on the trunk? Right now, this bug is a deal-breaker preventing me from using camino 0.7+
Assignee | ||
Comment 4•22 years ago
|
||
I'll start working on this soon.
Assignee | ||
Comment 5•22 years ago
|
||
Assignee | ||
Comment 6•22 years ago
|
||
Comment on attachment 121257 [details] [diff] [review] Add support for services via commands to get and insert text. This patch also contains a change in PresShell::DoCopyImageContents() that I missed in previous patches, which fixes image copy.
Attachment #121257 -
Flags: superreview?(bryner)
Attachment #121257 -
Flags: review?(brade)
Comment 7•22 years ago
|
||
Comment on attachment 121257 [details] [diff] [review] Add support for services via commands to get and insert text. I don't like "cmd_getContents" (too generic; contents of what?) but I don't have any better suggestions. :-/ Why does nsClipboardGetContentsCommand::IsClipboardCommandEnabled always return PR_TRUE instead of returning results from GetCanGetContents? r=brade with the above addressed
Attachment #121257 -
Flags: review?(brade) → review+
Assignee | ||
Comment 8•22 years ago
|
||
cmd_getContents can be used to get both the selection, and the entire document,
which is why it's generic-sounding. And it can get text or HTML.
> Why does nsClipboardGetContentsCommand::IsClipboardCommandEnabled always return
> PR_TRUE instead of returning results from GetCanGetContents?
Ah, meant to fix that. Thanks for spotting.
Comment on attachment 121257 [details] [diff] [review] Add support for services via commands to get and insert text. sr=kin@netscape.com ==== Do we need to null check |outCmdEnabled| first? +nsresult +nsClipboardGetContentsCommand::IsClipboardCommandEnabled(const char* aCommandName, nsIContentViewerEdit* aEdit, PRBool *outCmdEnabled) +{ + *outCmdEnabled = PR_TRUE; ==== Do we have to rename these args to begin with 'a'? +/* AString getContents (in string mimeType, in boolean selectionOnly); */ +NS_IMETHODIMP DocumentViewerImpl::GetContents(const char *mimeType, PRBool selectionOnly, nsAString & _retval) ==== Same here: +nsresult +PresShell::GetSelectionForCopy(nsISelection** outSelection) ==== In GetSelectionForCopy() and DoGetContents(), should probably make each of these |if| statements one liners to match the other |if|s in the method or change the others so that they are all consistent. if (NS_FAILED(rv)) return rv; if (!manager) return NS_ERROR_FAILURE; ==== I'm guessing you left the 'a' off of |outValue| intentionally? +PresShell::DoGetContents(const nsACString& aMimeType, PRUint32 aFlags, PRBool aSelectionOnly, nsAString& outValue) ==== Should we rename canInsertText to canModify?
Attachment #121257 -
Flags: superreview?(bryner) → superreview+
Assignee | ||
Comment 10•22 years ago
|
||
Checked in with comments addressed. Thanks!
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Reporter | ||
Comment 11•21 years ago
|
||
Verified in the 2004010503 NB under 10.2.3
Status: RESOLVED → VERIFIED
Comment 12•16 years ago
|
||
> Platform: PowerPC Mac OS X
No mention of Intel here.
Please: can we confirm whether this resolution is effective for users of
Mac OS X on Intel?
(If so, maybe change the 'Platform' of this ticket?)
This bug was filed in 2003 and fixed in 2004; if you're having a problem with Services today, please file a new bug.
You need to log in
before you can comment on or make changes to this bug.
Description
•