Fix bug 196704: implement commands to get the selected text, and insert text, to allow for embedders (like Camino) to use them, e.g. for the Mac OS X services menu. Also fix image copy. r=brade, sr=kin.