dom/src/base/nsGlobalWindowCommands.cpp
@@ -43,6 +43,7 @@
 #include "nsIInterfaceRequestor.h"
 #include "nsIInterfaceRequestorUtils.h"
 #include "nsCRT.h"
+#include "nsString.h"
 
 #include "nsIControllerCommandTable.h"
 #include "nsICommandParams.h"
@@ -401,7 +402,7 @@ public:
 protected:
 
   virtual nsresult    IsClipboardCommandEnabled(const char * aCommandName, nsIContentViewerEdit* aEdit, PRBool *outCmdEnabled) = 0;
-  virtual nsresult    DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit) = 0;
+  virtual nsresult    DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams) = 0;
   
   static nsresult     GetContentViewerEditFromContext(nsISupports *aContext, nsIContentViewerEdit **aEditInterface);
   
@@ -441,7 +442,7 @@ nsClipboardBaseCommand::DoCommand(const char *aCommandName,
   GetContentViewerEditFromContext(aCommandContext,  getter_AddRefs(contentEdit));
   NS_ENSURE_TRUE(contentEdit, NS_ERROR_NOT_INITIALIZED);
 
-  return DoClipboardCommand(aCommandName, contentEdit);
+  return DoClipboardCommand(aCommandName, contentEdit, nsnull);
 }
 
 NS_IMETHODIMP
@@ -457,7 +458,11 @@ nsClipboardBaseCommand::DoCommandParams(const char *aCommandName,
                                         nsICommandParams *aParams,
                                         nsISupports *aCommandContext)
 {
-  return DoCommand(aCommandName, aCommandContext);
+  nsCOMPtr<nsIContentViewerEdit> contentEdit;
+  GetContentViewerEditFromContext(aCommandContext,  getter_AddRefs(contentEdit));
+  NS_ENSURE_TRUE(contentEdit, NS_ERROR_NOT_INITIALIZED);
+
+  return DoClipboardCommand(aCommandName, contentEdit, aParams);
 }
 
 nsresult
@@ -499,7 +504,7 @@ protected:                                                                      
   virtual nsresult    IsClipboardCommandEnabled(const char* aCommandName,                   \
                                   nsIContentViewerEdit* aEdit, PRBool *outCmdEnabled);      \
   virtual nsresult    DoClipboardCommand(const char* aCommandName,                          \
-                                  nsIContentViewerEdit* aEdit);                             \
+                                  nsIContentViewerEdit* aEdit, nsICommandParams* aParams);  \
   /* no member variables, please, we're stateless! */                                       \
 };
 
@@ -509,6 +514,7 @@ NS_DECL_CLIPBOARD_COMMAND(nsClipboardPasteCommand)
 NS_DECL_CLIPBOARD_COMMAND(nsClipboardCopyLinkCommand)
 NS_DECL_CLIPBOARD_COMMAND(nsClipboardImageCommands)
 NS_DECL_CLIPBOARD_COMMAND(nsClipboardSelectAllNoneCommands)
+NS_DECL_CLIPBOARD_COMMAND(nsClipboardGetContentsCommand)
 
 #if 0
 #pragma mark -
@@ -522,7 +528,7 @@ nsClipboardCutCommand::IsClipboardCommandEnabled(const char* aCommandName, nsICo
 }
 
 nsresult
-nsClipboardCutCommand::DoClipboardCommand(const char* aCommandName, nsIContentViewerEdit* aEdit)
+nsClipboardCutCommand::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
 {
   return aEdit->CutSelection();
 }
@@ -538,7 +544,7 @@ nsClipboardCopyCommand::IsClipboardCommandEnabled(const char* aCommandName, nsIC
 }
 
 nsresult
-nsClipboardCopyCommand::DoClipboardCommand(const char* aCommandName, nsIContentViewerEdit* aEdit)
+nsClipboardCopyCommand::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
 {
   return aEdit->CopySelection();
 }
@@ -554,7 +560,7 @@ nsClipboardPasteCommand::IsClipboardCommandEnabled(const char* aCommandName, nsI
 }
 
 nsresult
-nsClipboardPasteCommand::DoClipboardCommand(const char* aCommandName, nsIContentViewerEdit* aEdit)
+nsClipboardPasteCommand::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
 {
   return aEdit->Paste();
 }
@@ -571,7 +577,7 @@ nsClipboardCopyLinkCommand::IsClipboardCommandEnabled(const char* aCommandName, 
 }
 
 nsresult
-nsClipboardCopyLinkCommand::DoClipboardCommand(const char* aCommandName, nsIContentViewerEdit* aEdit)
+nsClipboardCopyLinkCommand::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
 {
   return aEdit->CopyLinkLocation();
 }
@@ -587,7 +593,7 @@ nsClipboardImageCommands::IsClipboardCommandEnabled(const char* aCommandName, ns
 }
 
 nsresult
-nsClipboardImageCommands::DoClipboardCommand(const char* aCommandName, nsIContentViewerEdit* aEdit)
+nsClipboardImageCommands::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
 {
   if (!nsCRT::strcmp(sCopyImageLocationString, aCommandName))
     return aEdit->CopyImageLocation();
@@ -607,12 +613,45 @@ nsClipboardSelectAllNoneCommands::IsClipboardCommandEnabled(const char* aCommand
 }
 
 nsresult
-nsClipboardSelectAllNoneCommands::DoClipboardCommand(const char* aCommandName, nsIContentViewerEdit* aEdit)
+nsClipboardSelectAllNoneCommands::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
 {
   if (!nsCRT::strcmp(sSelectAllString, aCommandName))
     return aEdit->SelectAll();
 
   return aEdit->ClearSelection();
+}
+
+
+#if 0
+#pragma mark -
+#endif
+
+nsresult
+nsClipboardGetContentsCommand::IsClipboardCommandEnabled(const char* aCommandName, nsIContentViewerEdit* aEdit, PRBool *outCmdEnabled)
+{
+  return aEdit->GetCanGetContents(outCmdEnabled);
+}
+
+nsresult
+nsClipboardGetContentsCommand::DoClipboardCommand(const char *aCommandName, nsIContentViewerEdit* aEdit, nsICommandParams* aParams)
+{
+  NS_ENSURE_ARG(aParams);
+
+  nsCAutoString mimeType("text/plain");
+
+  nsXPIDLCString format;    // nsICommandParams needs to use nsACString
+  if (NS_SUCCEEDED(aParams->GetCStringValue("format", getter_Copies(format))))
+    mimeType.Assign(format);
+  
+  PRBool selectionOnly = PR_FALSE;
+  aParams->GetBooleanValue("selection_only", &selectionOnly);
+  
+  nsAutoString contents;
+  nsresult rv = aEdit->GetContents(mimeType.get(), selectionOnly, contents);
+  if (NS_FAILED(rv))
+    return rv;
+    
+  return aParams->SetStringValue("result", contents);
 }
 
 
@@ -917,6 +956,8 @@ nsWindowCommandRegistration::RegisterWindowCommands(
   NS_REGISTER_LAST_COMMAND(nsClipboardImageCommands, sCopyImageContentsString);
   NS_REGISTER_FIRST_COMMAND(nsClipboardSelectAllNoneCommands, sSelectAllString);
   NS_REGISTER_LAST_COMMAND(nsClipboardSelectAllNoneCommands, sSelectNoneString);
+
+  NS_REGISTER_ONE_COMMAND(nsClipboardGetContentsCommand, "cmd_getContents");
 
   NS_REGISTER_ONE_COMMAND(nsGoBackCommand, "cmd_browserBack");
   NS_REGISTER_ONE_COMMAND(nsGoForwardCommand, "cmd_browserForward");
